# FINAL-PLENUM-CAFM

./: .dockerignore  .gitignore  .tmp_schema_openapi.json  Dockerfile.single-app  README.md  azure-pipelines.yml  burst20_deepagents_logs.txt  burst20_results.jsonl  burst20_schema_mapper_logs.txt  burst20b_deepagents_logs.txt  burst20b_results.jsonl  burst30_not_indexed.jsonl  burst30_results.jsonl  burst30b_results.jsonl  docker-compose.dev-ports.yml  docker-compose.single-url.local.yml
apps/backend/cafm-connector-service-final/cafm-connector-service/: .env.example  README.md  pyproject.toml
apps/backend/cafm-connector-service-final/cafm-connector-service/docker/: Dockerfile  docker-compose.yml
apps/backend/cafm-connector-service-final/cafm-connector-service/migrations/: fiix_schema_expansion.sql
apps/backend/cafm-connector-service-final/cafm-connector-service/test-data/: cafm_test_assets.xlsx
apps/backend/cafm-connector-service-final/cafm-connector-service/tests/unit/: test_secrets.py
apps/backend/cafm-connector-service-final/shared-lib/: pyproject.toml
apps/backend/cafm-connector-service-final/shared-lib/cafm_shared/: __init__.py  exceptions.py  logging.py  metrics.py  telemetry.py
apps/backend/cafm-connector-service-final/shared-lib/cafm_shared/models/: __init__.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  DOCKER_SETUP.md  Dockerfile  MAPPING_STORAGE_ARCHITECTURE.md  PHASE_8_COMPLETION_REPORT.md  PHASE_8_TESTS.md  PROGRESS_REPORT.md  SCHEMA_MAPPING_PIPELINE.md  alembic.ini  pyproject.toml  pytest.ini  streamlit_app.py  streamlit_schema_mapper.py  test_mapping_flow.sh  test_schema_introspection.py  upload_all_mappings.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/alembic/: __init__.py  env.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/alembic/versions/: 003_add_migration_tables.py  004_add_mapping_templates.py  005_add_schema_mapping_tables.py  006_add_gate_payload_columns.py  007_add_schema_mapping_gate_columns.py  008_add_node_logs_column.py  009_add_field_mapping_draft.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/fixtures/: assets_sample.csv
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/fixtures/mappers/: fiix_mapping.json  maximo_mapping.json  sap_pm_mapping.json
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/fixtures/test_data/: simple_assets.csv
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/scripts/: ensure_field_mapping_draft.py  purge_all_migrations.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/src/: __init__.py  app.py  config.py  config_loader.py  db.py  embeddings.py  runtime_logs.py  schema_patches.py  schemas.py  schemas_schema_mapping.py  worker.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/src/api/: mappings.py  udr_rerun.py
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/src/connectors/: README.md  __init__.py  fiix_connector.py  fiix_credentials.py  fiix_data_connector.py  fiix_plenum_mappings.py  fiix_schema_reference.json
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/src/export/: __init__.py  csv_exporter.py  intermediate_schema_builder.py  json_builder.py  report_generator.py  (+1 more)
apps/backend/cafm-connector-service-final/svc-ai-schema-mapper/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_default_plenum_hierarchy.py  test_e2e_pipeline.py  test_websocket.py
apps/backend/cafm-connector-service-final/svc-deepagents/: .env.example  Dockerfile  PHASES_1_7_COMPLETION.md  PHASE_D_PLAN.md  pyproject.toml
apps/backend/cafm-connector-service-final/svc-deepagents/src/: config.py  database.py  http_client.py  llm_factory.py
apps/backend/cafm-connector-service-final/svc-deepagents/tests/: test_phase_d.py  test_phases_1_7.py
apps/backend/cafm-connector-service-final/svc-ingestion/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/backend/cafm-connector-service-final/svc-ingestion/alembic/: env.py
apps/backend/cafm-connector-service-final/svc-ingestion/src/: app.py  config.py  worker.py
apps/backend/cafm-connector-service-final/svc-ingestion/tests/: test_agent_determinism.py  test_batch_processor.py  test_confidence_router.py  test_entity_resolver.py  test_eval_layer.py  test_health.py  test_intermediate_schema.py  test_migration_002.py  test_orchestrator.py  test_prompt_engine.py  test_prompt_refinement.py  test_review_queue.py  test_xml_json_agent.py
apps/backend/cafm-connector-service-final/svc-query/: Dockerfile  pyproject.toml
apps/backend/cafm-connector-service-final/svc-query/src/: app.py  config.py  eval_layer.py  intent_classifier.py  output_renderer.py
apps/backend/cafm-connector-service-final/svc-query/tests/: test_document_generator.py  test_health.py
apps/backend/cafm-connector-service-final/svc-udr/: .env.example  Dockerfile  pyproject.toml
apps/backend/cafm-connector-service-final/svc-udr/docs/: UDR_MODULE.md  UDR_RESULTS.md
apps/backend/cafm-connector-service-final/svc-udr/src/: app.py  config.py  db.py
apps/backend/cafm-connector-service-final/svc-work-order-management/: .env.example  Dockerfile  FRONTEND_API.md  alembic.ini  pyproject.toml  requirements.txt  run_tests.py  test_api.py  test_result.md
apps/backend/cafm-connector-service-final/svc-work-order-management/alembic/: env.py
apps/backend/cafm-connector-service-final/svc-work-order-management/docs/: INTELLIGENCE_ENGINE_TABLE_MODELS.md  INTELLIGENT_WO_ENGINE_IMPLEMENTATION_1.md  STEPS_12_15_COMPLETE.md  WORK_ORDER_MODULE_COMPLETE.md  intelligent_wo_alphanumeric_ids_1.sql
apps/backend/cafm-connector-service-final/svc-work-order-management/scripts/: APPROVAL_DEMO_SEED.md  analyze_approval_patterns.py  migrate_startup.py  seed_approval_demo.py  seed_data.py
apps/backend/cafm-connector-service-final/svc-work-order-management/src/: app.py  config.py  db.py  worker.py
apps/backend/cafm-connector-service-final/svc-work-order-management/tests/: conftest.py
(+843 files in other folders)
