[project]
name = "svc-deepagents"
version = "1.0.0"
description = "DeepAgents Orchestration Layer — LangChain + LangGraph main orchestrator for the Plenum CAFM platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.3,<0.4",
    "openai>=1.50",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "langgraph-checkpoint-postgres>=2.0,<3.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
