[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cafm-query-service"
version = "0.1.0"
description = "CAFM AI Platform — Natural Language Query Service (Sprint 2)"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",

    # Config
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",

    # Async DB
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30",

    # Redis
    "redis[hiredis]>=5.0",

    # Async HTTP + Claude API
    "httpx>=0.27",
    "anthropic>=0.40",

    # Output rendering (added in Task 4.6)
    # python-docx, reportlab
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
